test/should_pass/retype_001.grg
actions retype_001 using attrib_model_001;

rule r {
	pattern {
		a:NINT;
	}
	replace {
		b:NFLOAT<a>;
	}
}

